--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,8 @@
     { "source": "/modrinth", "destination": "https://modrinth.com/user/Drygo", "permanent": true },
     { "source": "/portfolio", "destination": "https://portfolio.drygo.dev", "permanent": true },
     { "source": "/turtle", "destination": "https://turtleclub.drygo.dev", "permanent": true },
+    { "source": "/kairi", "destination": "https://discord.gg/dwa3EJf9tJ", "permanent": true },
+    { "source": "/sector_x", "destination": "https://x.com/Sector__X", "permanent": true },
     { "source": "/twitter", "destination": "https://twitter.com/eldrygo", "permanent": true }
   ]
 }
