🔧 update links to 33drygo and portfolio

--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,15 @@
     { "source": "/", "destination": "https://www.drygo.dev", "permanent": true },
     { "source": "/youtube", "destination": "https://www.youtube.com/@eldrygo", "permanent": true },
     { "source": "/drykoso", "destination": "https://www.youtube.com/@drykoso", "permanent": true },
-    { "source": "/kick", "destination": "https://kick.com/eldrygo", "permanent": true },
-    { "source": "/twitch", "destination": "https://twitch.tv/eldrygo", "permanent": true },
+    { "source": "/kick", "destination": "https://kick.com/33drygo", "permanent": true },
+    { "source": "/twitch", "destination": "https://twitch.tv/33drygo", "permanent": true },
     { "source": "/github", "destination": "https://github.com/xDrygo", "permanent": true },
     { "source": "/discord", "destination": "https://discord.com/users/557695198646239243", "permanent": true },
     { "source": "/modrinth", "destination": "https://modrinth.com/user/Drygo", "permanent": true },
-    { "source": "/portfolio", "destination": "https://portfolio.drygo.dev", "permanent": true },
-    { "source": "/turtle", "destination": "https://turtleclub.drygo.dev", "permanent": true },
+    { "source": "/portfolio", "destination": "https://portfolio-v2.drygo.dev", "permanent": true },
+    { "source": "/turtle", "destination": "https://www.turtleclub.dev", "permanent": true },
     { "source": "/kairi", "destination": "https://discord.gg/dwa3EJf9tJ", "permanent": true },
     { "source": "/sector_x", "destination": "https://x.com/Sector__X", "permanent": true },
-    { "source": "/twitter", "destination": "https://twitter.com/eldrygo", "permanent": true }
+    { "source": "/twitter", "destination": "https://twitter.com/33drygo", "permanent": true }
   ]
 }
